Fixed responsiveness issues on mobile, added mediaqueries to css files

--- a/app/components/Wheel.module.css
+++ b/app/components/Wheel.module.css
@@ -4,8 +4,8 @@
   display: flex;
   align-items: center;
   justify-self: center;
-  margin-top: 6rem;
-  font-size: 15;
+  margin-top: 1rem;
+  font-size: 20;
   background: gold;
   border-radius: 50%;
   overflow: hidden;
@@ -13,24 +13,27 @@
 }
 
 @keyframes coinSpin {
-    100% {transform: rotate3d(0, 0.1, 0, 360deg)}
+  100% {
+    transform: rotate3d(0, 0.1, 0, 360deg)
+  }
 }
 
 .container .middlebutton {
   position: absolute;
-  width: 6em;
-  height: 6em;
+  width: 30vw;
+  aspect-ratio: 1/1;
+  max-width: 13.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 3em;
-  color: black; 
+  font-size: 2em;
+  color: black;
   text-transform: uppercase;
   border-radius: 50%;
   border: solid 2px black;
   background: gold;
   z-index: 10;
-  box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.72);
+  box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.72);
   transition: transform ease 0.2s;
 }
 
@@ -52,13 +55,14 @@
 }
 
 .wheel {
-  height: 50em;
-  width: 50em;
+  width: 95vw;
+  max-width: 50rem;
+  aspect-ratio: 1/1;
   border-radius: 50%;
   border: 5px solid gold;
   position: relative;
   will-change: transform, clip-path;
-  transition: transform 2s cubic-bezier(0.2,-.17,0,1.03);
+  transition: transform 2s cubic-bezier(0.2, -.17, 0, 1.03);
 }
 
 .bonusSector {
@@ -66,11 +70,11 @@
   font-family: 'rye';
   width: 100%;
   height: 100%;
-  left: -47.25%;
+  left: -47.5%;
   top: 2%;
   transform: rotate(90deg);
   text-align: start;
-  font-size: 1.2rem;
+  font-size: 1em;
   line-height: 2;
 }
 
@@ -81,16 +85,52 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 1em;
   line-height: 2;
 }
 
 @keyframes spin {
   0% {
-  transform: rotate(0deg);
-}
+    transform: rotate(0deg);
+  }
+
   100% {
-  transform: rotate(360deg);
-}
+    transform: rotate(360deg);
+  }
 }
 
+@media (max-width: 1920px) {
+  .container {
+    font-size: 18px;
+  }
+
+  .wheel {
+    max-width: 35rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .container {
+    font-size: 17px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 576px) {
+  .container {
+    font-size: 10px;
+  }
+
+  .arrow {
+    height: 1.25rem;
+  }
+
+  .bonusSector {
+    left: -47.5%;
+  }
+}
