--- a/app/globals.css
+++ b/app/globals.css
@@ -20,11 +20,35 @@
 
 html {
   width: 100vw;
-  min-width: 800px;
   margin: 0;
   padding: 0;
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+}
+
+@media (max-width: 1200px) {
+    body {
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 992px) {
+    body {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 768px) {
+    body {
+        font-size: 13px;
+    }
+}
+
+@media (max-width: 576px) {
+    body {
+        font-size: 12px;
+    }
 }
