--- a/app/wheeloffortune/page.module.css
+++ b/app/wheeloffortune/page.module.css
@@ -2,14 +2,16 @@
   display: flex;
   justify-content: center;
   height: 10rem;
-  margin-top: 1rem;
+  font-size: 15;
+  padding-inline: 10px;
+  margin-top: 1em;
+  min-width: 100vw;
 }
 
 .playSelector {
   height: 100%;
-  aspect-ratio: 240/55;
   display: grid;
-  gap: 1rem;
+  gap: 1em;
   /*take full width of the container split in 4*/
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, auto);
@@ -22,16 +24,14 @@
   display: flex;
   position: absolute;
   align-self: center;
-  text-align: center;
-  gap: 9.75rem;
-  justify-content: space-evenly;
+  justify-self: center;
+  gap: 15.55em;
   pointer-events: none;
   user-select: none;
-  width: 43.7rem;
 }
 
 .playNumbers {
-  align-content: center;  
+  align-content: center;
   pointer-events: auto;
   border-width: 2rem;
   border-bottom-color: #e8b3aa;
@@ -46,11 +46,14 @@
   width: 0rem;
   transition: ease transform 0.1s;
 }
-.playNumbers:active, .playBonus:active {
+
+.playNumbers:active,
+.playBonus:active {
   transform: scale(0.97);
 }
 
-.playNumbers::after, .playBonus::after {
+.playNumbers::after,
+.playBonus::after {
   content: '';
   position: absolute;
   top: -2rem;
@@ -61,8 +64,9 @@
   box-shadow: black 0px 0px 4px 0px;
   border-radius: 50%;
 }
+
 .playBonus {
-  align-content: center;  
+  align-content: center;
   pointer-events: auto;
   border-width: 2rem;
   border-bottom-color: #266a3c;
@@ -90,6 +94,10 @@
   height: 4.5rem;
 }
 
+.betOptionContainer {
+  padding-inline: 1.5em;
+}
+
 .betOption {
   display: flex;
   position: relative;
@@ -98,8 +106,8 @@
   border: 1px solid black;
   z-index: 1;
   background: white;
-  height: 5rem;
   width: 5rem;
+  aspect-ratio: 1/1;
   user-select: none;
   color: white;
   border-radius: 50%;
@@ -114,4 +122,31 @@
 
 .betItem:active {
   transform: scale(0.97);
+}
+
+@media (max-width: 1200px) {
+  .betItem {
+    font-size: 1.5em;
+  }
+  .playMultiple {
+    gap: 14.5em;
+  }
+}
+
+@media (max-width: 992px) {}
+
+@media (max-width: 768px) {}
+
+@media (max-width: 576px) {
+  .playSelectorContainer {
+    margin-top: 0.5em;
+  }
+
+  .betItem {
+    font-size: 1em;
+  }
+
+  .playMultiple {
+    gap: 8.5em;
+  }
 }
